mobile version added ,vercel config added

--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
     <div id="gameContainer">
       <canvas id="gameCanvas"></canvas>
       <div id="instructions"></div>
+      <div id="mobileControls">
+        <button id="jumpBtn" class="control-btn">🏃 JUMP</button>
+        <button id="duckBtn" class="control-btn">⬇️ DUCK</button>
+      </div>
     </div>
 
-    <!-- Game Scripts (order matters: dependencies first) -->
+    <!-- Game Scripts(order matters dependencies first) -->
     <script src="js/constants.js"></script>
     <script src="js/input.js"></script>
     <script src="js/particles.js"></script>
